...
                .padding(8.dp),
            horizontalArrangement = Arrangement.SpaceAround
        ) {
            IconButton(onClick = onBack) {
                Icon(
                    painterResource(id = R.drawable.ic_back),
                    contentDescription = "Back"
                )
            }
            IconButton(onClick = { showSaveDialog = true
//                  // Fetch your DrawingEntity instance
//                val apiService = APIServ(ApiService.ktorAPIConnection)
//                CoroutineScope(Dispatchers.IO).launch {
//                    apiService.sendDrawingToServer(drawingEntity)
//                }

            }) {
                Icon(
                    painterResource(id = R.drawable.ic_floppy_disk),
                    contentDescription = "Save"
                )
            }
            IconButton(onClick = {
                onShareClick(scope, context, captureController)
            }) {
                Icon(
...
                    contentDescription = "Share"
                )
            }
            IconButton(onClick = { showColorPickerDialog = true }) {
                Icon(
                    painterResource(id = R.drawable.palette),
                    contentDescription = "Color"
                )
            }
            IconButton(onClick = { showStrokeWidthDialog = true }) {
                Icon(
                    painterResource(id = R.drawable.ic_paint_brush),
                    contentDescription = "Stroke"
                )
            }
            IconButton(onClick = {
                gravityMode = !gravityMode
            }){
                Icon(
...
            }
            IconButton(onClick = {
                eraseMode = !eraseMode // Toggle erase mode on/off
            }) {
                Icon(
                    painterResource(id = if (eraseMode) R.drawable.ic_eraser_off else R.drawable.ic_eraser),
                    contentDescription = "Erase"
                )
            }
        }

        //Capture everything in this column for 'Capturable'
        Column(modifier = Modifier.capturable(captureController)) {
...
    if (showColorPickerDialog) {
        Box(
            modifier = Modifier
                .fillMaxSize()
                .background(Color(0x80000000)) // Semi-transparent background for modal effect
                .padding(32.dp)
                .testTag("ColorPickerDialog"),
            contentAlignment = Alignment.Center
        ) {
            ColorPickerComponent(
                currentColor = selectedColor,
                updateHexColorCode = { newHex -> hexColorString = newHex }, // Update hex color code
                updateCurrentColor = { newColor -> selectedColor = newColor }, // Update selected color
...
    if (showStrokeWidthDialog) {
        Box(
            modifier = Modifier
                .fillMaxSize()
                .background(Color(0x80000000)) // Semi-transparent background for modal effect
                .padding(32.dp)
                .testTag("StrokePickerDialog"),
            contentAlignment = Alignment.Center
        ) {
            StrokeWidthComponent(
                currentStrokeProperty = currentStrokeProperty,
                updateCurrentStrokeProperty = { newStrokeWidth, strokeCap ->
                    newStrokeWidth?.let { strokeWidth = it } // Update stroke width
...
