...
        )

        Spacer(modifier = Modifier.height(20.dp))

        // Apply fade-in and scale-up animation to the text
        Text(
            text = "M.A.K Art",
            fontSize = 24.sp,
            textAlign = TextAlign.Center,
            modifier = Modifier
                .graphicsLayer(
                    alpha = animatedAlpha,  // Fade-in effect
                    scaleX = animatedScale, // Scale the text horizontally
...
